# fire-smoke-cv

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  main.py.save
configs/: fire_smoke.yaml
models/results/: results.csv
notebooks/: train_yolov8_colab.ipynb
scripts/: download_dataset.py
tests/: test_api.py
